upgrade maven wrapper version